Modified proto4 architecture.

--- a/proto4.tex
+++ b/proto4.tex
@@ -179,7 +179,7 @@ Figure~\ref{fig:proto4architecture} shows architecture for prototype 4.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=1\textwidth]{proto4_architecture.png}
+  \includegraphics[width=1\textwidth]{proto4_architecture.jpeg}
 %\vspace*{1cm}
   \caption{Prototype 4 architecture}
   \label{fig:proto4architecture}
