fixed \mint indentation in hwh.tex.

--- a/hwh.tex
+++ b/hwh.tex
@@ -145,7 +145,7 @@ This results in the ability to define infinite data structures because at execut
 Consider the infinite list example:
 \mint{haskell}|let x = 1:x in x|
 
-results in:
+\noindent results in:
 \mint{haskell}|1 : 1 : 1 . . . |
 
 Lazy evaluation is part of operational semantics, i.e., how a \progLang{Haskell} program is evaluated.
