fixed \mint indentation in proto3.tex.

--- a/proto3.tex
+++ b/proto3.tex
@@ -153,7 +153,7 @@ For example:
 
 \mint{prolog}|?- append(A,B,[1,2,3]),B=[].|
 
-Listing~\ref{tab:andorraengineminiprlg} represents the Andorra engine.
+\noindent Listing~\ref{tab:andorraengineminiprlg} represents the Andorra engine.
 
 \begin{code-list}[H]
 \begin{singlespace}
