fixed \mint indentation in proto4.tex.

--- a/proto4.tex
+++ b/proto4.tex
@@ -64,7 +64,7 @@ Some simple actions include the one that prints to \haskellConstruct{stdout} bef
 
 \mint{haskell}|put s = Put s (Return ())|
 
-and the action that reads from \haskellConstruct{stdin} and returns the string unchanged:
+\noindent and the action that reads from \haskellConstruct{stdin} and returns the string unchanged:
 
 \mint{haskell}|get = Get (\s -> Return s)|
 
