fixed \mint indentation in pwp.tex.

--- a/pwp.tex
+++ b/pwp.tex
@@ -338,7 +338,7 @@ Consider the example below:
 
 \mint{prolog}|p(X) :- b(X),c(X),!,d(X),e(X).|
 
-The result for a sample query \prologConstruct{p(X)}:
+\noindent The result for a sample query \prologConstruct{p(X)}:
 \mint{prolog}|X = 1 ; no|
 
 Only a single solution is obtained because the \prologConstruct{cut} prevents backtracking. The Figure~\ref{fig:Trace with cut} shows the 
