modified content in section 14.6 in futureScope.tex.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -88,7 +88,7 @@ unification.
 Generally speaking, quantifiers and logic can be programmed per constructor adding to the extensibility of the
 language.
 
-\section{Pure + IO Language Combined}
+\section{Additions and extensions to prototype 4}
 Chapter~\ref{proto4} defines a grammar for encapsulating and ultimately controlling impure actions in a language.
 The constructors are split into two types representing pure and impure actions.
 A program would be a chaining/ sequence of these actions.
@@ -104,6 +104,8 @@ Listing~\ref{tab:hybridconstruct} provides an example.
 \caption{Grammar with hybrid constructors}
 \label{tab:hybridconstruct}
 \end{code-list}
+
+Moreover, Chapter~\ref{proto4} lacks an accompanying implementation.
 
 \section{Chapter recapitulation}
 Recapitulating, this chapter provided us with points where this thesis could be extended in the future along with
