modified listing captions in pwp.tex.

--- a/pwp.tex
+++ b/pwp.tex
@@ -243,7 +243,7 @@ For example, consider the append function shown in Listing~\ref{tab:prlgappnd}.
 \begin{singlespace}
 \inputminted{prolog}{prolog-pwp-append.pl}
 \end{singlespace}
-\caption{append function in \progLang{Prolog}}
+\caption{\protect{\prologConstruct{append}} function in \progLang{Prolog}}
 \label{tab:prlgappnd}
 \end{code-list}
 %
@@ -319,7 +319,7 @@ A sample query \prologConstruct{p(X)} will result in \ref{tab:prlgcutfreeexmplou
   \begin{singlespace}
     \inputminted[linenos]{prolog}{prlgcutfreeexmpl.pl}
   \end{singlespace}
-  \caption{A cut-free Prolog computation \cite{website:cutprologunionedu}}
+  \caption{A \protect{\prologConstruct{cut}}-free Prolog computation \cite{website:cutprologunionedu}}
 \label{tab:prlgcutfreeexmpl}
 \end{code-list}
 
@@ -327,7 +327,7 @@ A sample query \prologConstruct{p(X)} will result in \ref{tab:prlgcutfreeexmplou
   \begin{singlespace}
     \inputminted[linenos]{prolog}{prlgcutfreeexmploutput.pl}
   \end{singlespace}
-  \caption{cut-free Prolog computation output\cite{website:cutprologunionedu}}
+  \caption{\protect{\prologConstruct{cut}}-free Prolog computation output\cite{website:cutprologunionedu}}
 \label{tab:prlgcutfreeexmploutput}
 \end{code-list}
 
