modified listing captions in proto1.tex.

--- a/proto1.tex
+++ b/proto1.tex
@@ -462,7 +462,7 @@ The dictionary along with the fixed point version flattened of the term, as show
   \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto1-utermify-frog.hs}
   \end{singlespace}
-  \caption{Conversion to UTerm}
+  \caption{Conversion to \protect{\prologConstruct{UTerm}}}
   \label{tab:to-UTerm}
 \end{code-list}
 %
@@ -472,7 +472,7 @@ and for later use to convert them back, as shown in Figure~\ref{tab:from-UTerm}.
   \begin{singlespace}
     \inputminted[linenos]{haskell}{haskell-proto1-vtermify-goat.hs}
   \end{singlespace}
-  \caption{Conversion from UTerm}
+  \caption{Conversion from \protect{\prologConstruct{UTerm}}}
   \label{tab:from-UTerm}
 \end{code-list}
 
