Modified listing captions in proto2.tex.

--- a/proto2.tex
+++ b/proto2.tex
@@ -175,7 +175,7 @@ Listing~\ref{tab:prlg0201monadicunificationconversion}.
   \begin{singlespace}
     \inputminted[linenos]{haskell}{haskell-proto2-monadic-unification-conversion.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Conversion Functions}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} Monadic Unification Conversion Functions}
 \label{tab:prlg0201monadicunificationconversion}
 \end{code-list}
 
@@ -183,7 +183,7 @@ Listing~\ref{tab:prlg0201monadicunificationconversion}.
   \begin{singlespace}
     \inputminted[linenos]{haskell}{haskell-proto2-monadic-unification-translation.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Translation Functions}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} Monadic Unification Translation Functions}
 \label{tab:prlg0201monadicunificationtranslation}
 \end{code-list}
 
@@ -205,7 +205,7 @@ The results produced by the query resolver are shown in Listing~\ref{tab:prlg020
 \begin{singlespace}
 \inputminted{haskell}{haskell-proto2-prlg-0201-unifier.hs}
 \end{singlespace}
-\caption{prolog-0.2.0.1 Unifier}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} \protect{\haskellConstruct{Unifier}}}
 \label{tab:prlg0201unifier}
 \end{code-list}
 
@@ -219,7 +219,7 @@ Each language expression is matched based on its structure and returns a \haskel
   \begin{singlespace}
     \inputminted[linenos]{haskell}{haskell-proto2-unification-lion.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Unification}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} Unification}
 \label{tab:prlg0201unification}
 \end{code-list}
 
@@ -240,7 +240,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}.
   \begin{singlespace}
     \inputminted[linenos]{haskell}{haskell-proto2-monadic-unification-functions.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Functions}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} Monadic Unification Functions}
 \label{tab:prlg0201monadicunificationfunctions}
 \end{code-list}
 
@@ -248,7 +248,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}.
   \begin{singlespace}
     \inputminted[linenos,lastline=43]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction 1}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} Monadic Unification Tests and Extraction 1}
 \label{tab:prlg0201monadicunificationtestsandextraction1}
 \end{code-list}
 
@@ -256,7 +256,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}.
   \begin{singlespace}
     \inputminted[linenos,firstline=45, lastline=71]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction 2}
+\caption{\protect{\codeLibrary{prolog-0.2.0.1}} Monadic Unification Tests and Extraction 2}
 \label{tab:prlg0201monadicunificationtestsandextraction2}
 \end{code-list}
 
@@ -328,7 +328,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3unify}
   \begin{singlespace}
     \inputminted[linenos,firstline=121, lastline=130]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
   \end{singlespace}
-\caption{unify}
+\caption{\haskellConstruct{unify}}
 \label{tab:prlg0201monadicunificationtestsandextraction3unify}
 \end{code-list}
 
