Modified listing and figure captions in pwp.tex.

--- a/pwp.tex
+++ b/pwp.tex
@@ -144,7 +144,7 @@ Consider the clauses in Listing~\ref{tab:prologclausesuhc}:
 \begin{singlespace}
 \inputminted{prolog}{prolog-pwp-universal-horn-clause.pl}
 \end{singlespace}
-\caption{\progLang{Prolog} clause}
+\caption{\protect{\progLang{Prolog}} clause}
 \label{tab:prologclausesuhc}
 \end{code-list}
 
@@ -243,7 +243,7 @@ For example, consider the append function shown in Listing~\ref{tab:prlgappnd}.
 \begin{singlespace}
 \inputminted{prolog}{prolog-pwp-append.pl}
 \end{singlespace}
-\caption{\protect{\prologConstruct{append}} function in \progLang{Prolog}}
+\caption{\protect{\prologConstruct{append}} function in \protect{\progLang{Prolog}}}
 \label{tab:prlgappnd}
 \end{code-list}
 %
@@ -252,7 +252,7 @@ whose operation is illustrated in Figure~\ref{fig:Trace for append}.
 \begin{figure}[H]
 \centering
 \includegraphics[scale = 0.5]{PrologAppendWorking.png}
-\caption{Trace for append \cite{webiste:learnprolognowappend}}
+\caption{Trace for \protect{\prologConstruct{append}} \cite{webiste:learnprolognowappend}}
 \label{fig:Trace for append}
 \end{figure}
 
@@ -299,7 +299,7 @@ the trail to record which variables bindings ought to be undone on backtracking.
   \begin{singlespace}
     \inputminted[linenos, lastline=6]{prolog}{prologprogramtrace.pl}
   \end{singlespace}
-  \caption{Tracing a simple Prolog computation \cite{Sterling:1994:APA:175753} : \prologConstruct{Clauses}}
+  \caption{Tracing a simple \protect{\progLang{Prolog}} computation \cite{Sterling:1994:APA:175753} : \protect{\prologConstruct{Clauses}}}
 \label{tab:prlgprgrmtrceclauses}
 \end{code-list}
 
@@ -307,7 +307,7 @@ the trail to record which variables bindings ought to be undone on backtracking.
   \begin{singlespace}
     \inputminted[linenos, firstline=7]{prolog}{prologprogramtrace.pl}
   \end{singlespace}
-  \caption{Tracing a simple Prolog computation \cite{Sterling:1994:APA:175753} : Output}
+  \caption{Tracing a simple \protect{\progLang{Prolog}} computation \cite{Sterling:1994:APA:175753} : Output}
 \label{tab:prlgprgrmtrceop}
 \end{code-list}
 
@@ -319,7 +319,7 @@ A sample query \prologConstruct{p(X)} will result in \ref{tab:prlgcutfreeexmplou
   \begin{singlespace}
     \inputminted[linenos]{prolog}{prlgcutfreeexmpl.pl}
   \end{singlespace}
-  \caption{A \protect{\prologConstruct{cut}}-free Prolog computation \cite{website:cutprologunionedu}}
+  \caption{A \protect{\prologConstruct{cut}}-free \protect{\progLang{Prolog}} computation \cite{website:cutprologunionedu}}
 \label{tab:prlgcutfreeexmpl}
 \end{code-list}
 
@@ -327,7 +327,7 @@ A sample query \prologConstruct{p(X)} will result in \ref{tab:prlgcutfreeexmplou
   \begin{singlespace}
     \inputminted[linenos]{prolog}{prlgcutfreeexmploutput.pl}
   \end{singlespace}
-  \caption{\protect{\prologConstruct{cut}}-free Prolog computation output\cite{website:cutprologunionedu}}
+  \caption{\protect{\prologConstruct{cut}}-free \protect{\progLang{Prolog}} computation output\cite{website:cutprologunionedu}}
 \label{tab:prlgcutfreeexmploutput}
 \end{code-list}
 
@@ -347,7 +347,7 @@ trace for the query with the \prologConstruct{cut} operator.
 \begin{figure}[H]
 \centering
 \includegraphics[scale = .95]{prologcutrace.jpeg}
-\caption{Trace with cut (taken from \cite{website:cutprologunionedu})}
+\caption{Trace with \protect{\prologConstruct{cut}} (taken from \cite{website:cutprologunionedu})}
 \label{fig:Trace with cut}
 \end{figure}
 
