Modified captions for listings and figures in hwh.tex.

--- a/hwh.tex
+++ b/hwh.tex
@@ -89,7 +89,7 @@ Each \haskellConstruct{Variable} is a \haskellConstruct{VariableName}, \haskellC
   \begin{singlespace}
     \inputminted[linenos, firstline=22, lastline=35]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
-  \caption{Haskell Monad Working: Data Types}
+  \caption{\protect{\progLang{Haskell}} Monad Working: Data Types}
 \label{tab:hskllmndworkngdatatype}
 \end{code-list}
 
@@ -102,7 +102,7 @@ Listing~\ref{tab:hskllmndworkngfunctions} shows the insertion and removal in a v
       , lastline=71
     ]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
-  \caption{Haskell Monad Working: Functions}
+  \caption{\protect{\progLang{Haskell}} Monad Working: Functions}
 \label{tab:hskllmndworkngfunctions}
 \end{code-list}
 
@@ -114,7 +114,7 @@ variables and storing back the result in the dictionary.
   \begin{singlespace}
     \inputminted[linenos, firstline=73, lastline=86]{haskell}{haskell-monad-working-2.hs}
   \end{singlespace}
-  \caption{Haskell Monad Working: Examples}
+  \caption{\protect{\progLang{Haskell}} Monad Working: Examples}
 \label{tab:hskllmndworkngexamples}
 \end{code-list}
 
@@ -131,7 +131,7 @@ runExampleOperation init_dictionary ("x" <-- 10) ("y" <-- 20)
     x3 <-- 3,x4 <-- 4,x5 <-- 5]}
 \end{minted}
   \end{singlespace}
-  \caption{Haskell Monad Working: Example output}
+  \caption{\protect{\progLang{Haskell}} Monad Working: Example output}
 \label{tab:hskllmndworkngexamplesoutput}
 \end{code-list}
 
