--- a/abstract.tex
+++ b/abstract.tex
@@ -3,17 +3,15 @@
 \begin{unbcabstract}
 
 This thesis focuses on combining the two most important and wide spread declarative programming paradigms, 
-functional and logical programming. This will include playing with languages from each paradigm, 
-\progLang{Haskell} from the functional side and \progLang{Prolog} from the logical side. The proposed approach 
-aims at adding logic programming features which are native to \progLang{Prolog} onto \progLang{Haskell} by 
-developing an extension which replicates the target language and utilizes the advanced features of the host for an 
-efficient implementation.      
+functional and logic programming. The proposed approach 
+aims at adding logic programming features which are native to \progLang{Prolog} onto \progLang{Haskell}. We
+develop extensions which replicate the target language by utilizing advanced features of the host language
+for an efficient implementation.      
 
-The thesis  aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
-\progLang{Prolog} by embedding the latter into the former and analyzing the result of doing so as they have
+The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
+\progLang{Prolog} by embedding the latter into the former and analyzing the results of doing so as the two languages have
 conflicting characteristics.
-The finished product will be something like a \textit{haskellised} \progLang{Prolog} which has logical programming
-like capabilities.
+The finished products will be something similar to a \textit{haskellised} \progLang{Prolog} which has logic programming-like capabilities.
 
 \end{unbcabstract}
 
