Polished conclusion.tex.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -10,17 +10,16 @@
 \chapter{Conclusion}\label{chap:conclusion}
 % ---------------------------------------------------------------------------
 \paragraph{}
-This thesis was set out to explore and study the various approaches used for bringing features of multiple languages into a single 
-programming environment and has identified embedding and paradigm integration as being the major ones. This study has also sought to improve
-the existing work on implementing \progLang{Prolog} in \progLang{Haskell}. One of the main contributions of this thesis was to build a 
-\progLang{Prolog}-like language in \progLang{Haskell} which not only is closer to a \progLang{Prolog} distribution but also provides 
+This thesis set out to explore the various approaches used for bringing features of multiple languages into a single 
+programming environment, and has identified embedding and paradigm integration as being the major ones. This study has also sought to improve
+the existing work on implementing \progLang{Prolog} in \progLang{Haskell}. One contribution of this thesis is a  
+\progLang{Prolog}-like language in \progLang{Haskell} which not only is closer to a ``real'' \progLang{Prolog} distribution but also provides 
 logic programming functionality as natively as possible in the host language.
 
 During this process we have also thrown light on the subject of eDSLs in \progLang{Haskell} and the support for the same. Moreover, we
 have provided a methodology for replicating results achieved in this thesis.
 
-The benefits of \progLang{Haskell} as a tool for embedding domain specific languages have been shown to be effective in proving it to be
-a suitable target language.
+\progLang{Haskell} has been shown to be an effective tool for embedding domain specific languages.
 
 
 \ifMain
