Fixed grammatical erros in Chapter 1 Introduction.

--- a/introduction.tex
+++ b/introduction.tex
@@ -48,7 +48,7 @@ This results in a hybrid approach which provides a library taking advantage of t
 The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
 \progLang{Prolog} by embedding the latter into the former and analyzing the result of doing so as they have
 conflicting characteristics.
-The finished product will be something like a \textit{haskellised} \progLang{Prolog} which has logical programming
+The finished product will be something like a \textit{haskellised} \progLang{Prolog} which has logic programming
 like capabilities.
 
 
@@ -116,9 +116,9 @@ particular problem domain.\label{sec:DSL-def} In many cases, DSL programs are tr
 subroutine library and the DSL can be viewed as a means to hide the details of that library \cite{van2000domain}.
 A domain specific language (DSL) is built specically to express the concepts of a particular domain.
 Generally, two types of DSL can be distinguished according to the underlying implementation strategy.
-An external DSL (eDSL) is constructed from scratch, starting from definition of the desired syntax to
+An external DSL is constructed from scratch, starting from definition of the desired syntax to
 implementation of the associated parser for reading it.
-In contrast, internal or embedded DSL are constructed on top of an existing host language \cite{machadomodel}.
+In contrast, internal or embedded DSLs (eDSL) are constructed on top of an existing host language \cite{machadomodel}.
 
 Putting all of the above together, Domain Specific Languages are pretty good in doing what they are designed to do,
 but nothing else, resulting in choosing a different language every time.
@@ -145,7 +145,7 @@ sometimes logical and sometimes both.
 Depending upon the problem, the language shapes itself accordingly and exhibits the desired characteristics.
 The ideal situation is a language with a rich feature set and the ability to mould itself according to the problem.
 A language with the ability to take the appropriate skill set and provide them to the programmer will reduce the
-hassle of jumping between languages or forcibly trying to solve a problem according within the limitations of a
+hassle of jumping between languages or forcibly trying to solve a problem according to the limitations of a
 paradigm.
 
 The subject in question here is \progLang{Haskell} and the split personality being \progLang{Prolog}.
@@ -211,7 +211,7 @@ Chapters \ref{chap:hwh} and \ref{chap:pwp} discuss the languages used in this th
 \progLang{Prolog}.
 Chapters \ref{proto1}, \ref{proto2}, \ref{proto3} and \ref{proto4} describe the ideas and the implementation
 details of the prototypes.
-Chapter~\ref{chap:futureScope} gives a glimpse of the future and we conclude with the
+Chapter~\ref{chap:futureScope} gives a glimpse of the future and we conclude with
 Chapter~\ref{chap:conclusion}.
 
 
